# pdf_timetable2json

./: .gitignore  CURL_COMMANDS.md  Dockerfile  README.md  environment.yml  pyproject.toml
src/app/: __init__.py  api.py  csv_parser.py  file_utils.py  formatters.py  handlers.py  logger_config.py  main.py  middleware.py  models.py  pdf_parser.py  swagger_config.py
